AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(itsnet, 1.1)

AC_GNU_SOURCE

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_CHECK_LIB(m, sin,[],[echo "Error! You need to have libm-dev";exit -1])
AC_CHECK_LIB(gps,gps_open,[],[echo "Error! You need to have libgps-dev.";exit -1])
AC_CHECK_LIB(pthread, pthread_create,[],[echo "Error! You need to have libpthread-dev.";exit -1])
AC_CHECK_LIB(rt, clock_gettime,[],[echo "Error! You need to have librt-dev.";exit -1])
AC_CHECK_LIB(confuse, cfg_init,[],[echo "Error! You need to have libconfuse-dev.";exit -1])

AC_OUTPUT(Makefile src/Makefile)
